Fixed centering and overlapping of hero header
Added all text inside a div and used transform: translate(-50%,-50%) for main centering

--- a/index.css
+++ b/index.css
@@ -67,6 +67,7 @@ html {
     background-color: rgba(255, 255, 255, 0.75);
     overflow: auto;
     position: fixed;
+    z-index: 1;
     font-size: 5vw;
     font-weight: bold;
 }
@@ -145,16 +146,19 @@ html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    line-height: 100%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4vw;
-    /*Error*/
+    position: relative;
 }
 
-.hero h2 {}
+.hero-heading {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    color: white;
+}
 
 .section {
     margin: 0;
